--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 body {
     background-color: #e9e9e9;
     overflow-x: hidden;
+    direction: ltr
 
 }
 
@@ -11,7 +12,7 @@ body {
 }
 
 .clip-custom {
-    clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
 }
 
 .clip-custom2 {
