--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@ body {
     background-color: #e9e9e9;
     overflow-x: hidden;
     direction: ltr
-
 }
 
 .clip-sharp {
@@ -12,11 +11,24 @@ body {
 }
 
 .clip-custom {
-    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+
+
 }
 
 .clip-custom2 {
     clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
+
+}
+
+.clip-custom3 {
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+
+}
+
+.clip-custom4 {
+    clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
+
 
 }
 
